apps/rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: rancher
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.gomes.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-service
            port:
              name: https
  tls:
  - hosts:
    - rancher.gomes.dev
    secretName: rancher-tls # as expected by rancher
